--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,368 +1,11 @@
-@techreport{Abadie_Athey_Imbens_Wooldridge_2017,
-	author = {Abadie, Alberto and Athey, Susan and Imbens, Guido W. and Wooldridge, Jeffrey M.},
-	title = {When Should You Adjust Standard Errors for Clustering?},
-	institution = {National Bureau of Economic Research},
-	type = {Working Paper},
-	series = {Working Paper Series},
-	number = {24003},
-	year = {2017},
-	doi = {10.3386/w24003}
-}
-@article{Arellano_1987,
-	author = {Arellano, Manuel},
-	title = {Computing Robust Standard Errors for Within-groups Estimators},
-	journal =  {Oxford Bulletin of Economics and Statistics},
-	volume = {49},
-	pages = {431--434},
-	number = {4},
-	year = {1987},
-	doi = {10.1111/j.1468-0084.1987.mp49004006.x}
-}
-@article{Athey_Imbens_2016,
-	author = {Athey, Susan and Imbens, Guido W.},
-	title = {The Econometrics of Randomized Experiments},
-	journal =  {ArXiv e-prints},
-	archivePrefix = {arXiv},
-	eprint = {1607.00698},
-	primaryClass = {stat.ME},
-	keywords = {Statistics - Methodology, Economics - Econometrics, 62K99, G.3},
-	year = {2016},
-	url = {https://arxiv.org/abs/1607.00698}
-	}
-@book{Baltagi_2013,
-	location = {Chichester, West Sussex},
-	edition = {Fifth Edition},
-	title = {Econometric analysis of panel data},
-	isbn = {978-1-118-67232-7},
-	publisher = {John Wiley \& Sons, Inc},
-	author = {Baltagi, Badi H.},
-	date = {2013}
-}
-@article{Blinder_1973,
-	title = {Wage Discrimination: Reduced Form and Structural Estimates},
-	volume = {8},
-	issn = {0022166X},
-	doi = {10.2307/144855},
-	shorttitle = {Wage Discrimination},
-	pages = {436},
-	number = {4},
-	journal = {The Journal of Human Resources},
-	author = {Blinder, Alan S.},
-	date = {1973}
-}
-@article{Cameron_Gelbach_Miller_2011,
-    author = {Cameron, Adrian C. and Gelbach, Jonah B. and Miller, Douglas L.},
-    journal =  {Journal of Business \& Economic Statistics},
-    number = {2},
-    pages = {238--249},
-    publisher = {American Statistical Association},
-    title = {Robust Inference With Multiway Clustering},
-    volume = {29},
-    year = {2011},
-    doi = {10.2307/25800796}
-    }
-@article{Cameron_Miller_2015,
-	author = {Cameron, A. Colin and Miller, Douglas L.},
-	title = {A Practitioner's Guide to Cluster-Robust Inference},
-	journal = {Journal of Human Resources},
-	volume = {50},
-	pages = {317--372},
-	number = {2},
-	year = {2015},
-	doi = {10.3368/jhr.50.2.317}
-}
-@article{Card_Krueger_1992,
-	author = {Card, David and Krueger, Alan B.},
-	title = {School Quality and Black-White Relative Earnings: A Direct Assessment*},
-	journal = {The Quarterly Journal of Economics},
-	volume = {107},
-	number = {1},
-	pages = {151-200},
-	year = {1992},
-	doi = {10.2307/2118326}
-}
-@article{Dettori_Norvell_Skelly_Chapman_2011,
-	author = {Dettori, Joseph and Norvell, Daniel and Skelly, Andrea and Chapman, Jens},
-	title = {Heterogeneity of treatment effects: from ``How to treat'' to ``Whom to treat''},
-	volume = {2},
-	issn = {1663-7976, 1869-4136},
-	doi = {10.1055/s-0030-1267099},
-	shorttitle = {Heterogeneity of treatment effects},
-	pages = {7--10},
-	number = {2},
-	journal = {Evidence-Based Spine-Care Journal},
-	date = {2011-05},
-	langid = {english}
-}
-@article{Gibbons_SuarezSerrato_Urbancic_2018,
-	title = {Broken or Fixed Effects?},
-	journal = {Journal of Econometric Methods},
-	author = {Gibbons, Charles E. and Súarez Serrato, Juan Carlos and Urbancic, Michael B.},
-	year = {2018},
-	doi = {10.3386/w20342}
-	}
-@article{Liang_Zeger_1986,
-	author = {Liang, Kung-Yee and Zeger, Scott L.},
-	title = {Longitudinal data analysis using generalized linear models},
-	journal =  {Biometrika},
-	volume = {73},
-	pages = {13--22},
-	number = {1},
-	year = {1986},
-	doi = {10.1093/biomet/73.1.13}
-}
-
-@article{Rogers_1993,
-	author = {Rogers, William},
-	title = {Regression standard errors in clustered samples},
-	journal =  {Stata Technical	Bulletin},
-	volume = {13},
-	pages = {19--23},
-	number = {17},
-	year = {1993},
-	URL = {https://www.stata.com/products/stb/journals/stb13.pdf}
-}
-@inproceedings{Eicker_1967,
-	author = {Eicker, Friedhelm},
-	title = {Limit theorems for regressions with unequal and dependent errors},
-	Address = {Berkeley, California},
-	bookauthor = {Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Statistics},
-	pages = {59--82},
-	Publisher = {University of California Press},
-	URL = {https://projecteuclid.org/euclid.bsmsp/1200512981},
-	year = {1967}
-}
-@inproceedings{Huber_1967,
-	author = {Huber, Peter J.},
-	title = {The behavior of maximum likelihood estimates under nonstandard conditions},
-	Address = {Berkeley, California},
-	title = {Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Statistics},
-	pages = {221--233},
-	Publisher = {University of California Press},
-	URL = {https://projecteuclid.org/euclid.bsmsp/1200512988},
-	year = {1967}
-}
-@article{White_1980,
-	author = {White, Halbert L.},
-	title = {A Heteroskedasticity-Consistent Covariance Matrix Estimator and a Direct Test for Heteroskedasticity},
-	volume = {48},
-	pages = {817},
-	number = {4},
-	journal =  {Econometrica},
-	year = {1980},
-	doi = {10.2307/1912934}
-}
-@article{MacKinnon_White_1985,
-	author = {MacKinnon, James G. and White, Halbert L.},
-	title = {Some heteroskedasticity-consistent covariance matrix estimators with improved finite sample properties},
-	journal =  {Journal of Econometrics},
-	volume = {29},
-	pages = {305--325},
-	number = {3},
-	year = {1985},
-	doi = {10.1016/0304-4076(85)90158-7}
-}
-@article{Oaxaca_1973,
-	title = {Male-Female Wage Differentials in Urban Labor Markets},
-	volume = {14},
-	issn = {00206598},
-	doi = {10.2307/2525981},
-	pages = {693},
-	number = {3},
-	journal = {International Economic Review},
-	author = {Oaxaca, Ronald},
-	date = {1973-10}
-}
-@article{Solon_Haider_Wooldridge_2015,
-	author = {Solon, Gary and Haider, Steven J. and Wooldridge, Jeffrey M.},
-	title = {What Are We Weighting For?},
-	journal =  {Journal of Human Resources},
-	volume = {50},
-	number = {2},
-	pages = {301--316},
-	year = {2015},
-	doi = {10.3368/jhr.50.2.301}
-	}
-@article{Stapleton_Oseni_Bababekov_Hung_Chang_2018,
-	author = {Stapleton, SM and Oseni, TO and Bababekov, YJ and Hung, Y and Chang, DC},
-	title = {Race/ethnicity and age distribution of breast cancer diagnosis in the united states},
-	journal =  {{JAMA} Surgery},
-	year = {2018},
-	doi = {10.1001/jamasurg.2018.0035}
-	}
-@article{Stock_Watson_2008,
-	title = {Heteroskedasticity-Robust Standard Errors for Fixed Effects Panel Data Regression},
-	volume = {76},
-	doi = {10.1111/j.0012-9682.2008.00821.x},
-	pages = {155--174},
-	number = {1},
-	journal =  {Econometrica},
-	author = {Stock, James H. and Watson, Mark W.},
-	date = {2008-01},
-	langid = {english}
-}
-@book{Wooldridge_2010,
-	author = {Wooldridge, Jeffrey M.},
-	location = {Cambridge, Mass},
-	edition = {2nd ed},
-	title = {Econometric analysis of cross section and panel data},
-	isbn = {978-0-262-23258-6},
-	publisher = {MIT Press},
-	year = {2010}
-}
-@article{Xie_Brand_Jann_2012,
-	author = {Xie, Yu and Brand, Jennie E and Jann, Ben},
-	title = {Estimating Heterogeneous Treatment Effects with Observational Data},
-	volume = {42},
-	issn = {0081-1750, 1467-9531},
-	pages = {314--347},
-	number = {1},
-	journal = {Sociological methodology},
-	date = {2012-08}
-}
-@article{Yeh_Kramer_2017,
-	title = {Decision Tools to Improve Personalized Care in Cardiovascular Disease: Moving the Art of Medicine Toward Science},
-	volume = {135},
-	pages = {1097--1100},
-	number = {12},
-	journal = {Circulation},
-	author = {Yeh, Robert W. and Kramer, Daniel B.},
-	date = {2017-03-21},
-	doi = {10.1161/CIRCULATIONAHA.116.024247}
-}
-@misc{IPUMS,
-	title = {Integrated Public Use Microdata Series, Current Population Survey: Version 6.0},
-	url = {https://cps.ipums.org},
-	shorttitle = {Integrated Public Use Microdata Series, Current Population Survey},
-	publisher = {Minneapolis, {MN}: {IPUMS}},
-	author = {Flood, Sarah and King, Miriam and Rodgers, Renae and Ruggles, Steven and Warren, J. Robert},
-	date = {2018},
-	langid = {english},
-	doi = {10.18128/D030.V6.0},
-	note = {type: dataset}
-}
-% Second Chapter
-@article{AtheyImbens2016,
-	title = {Recursive partitioning for heterogeneous causal effects},
-	volume = {113},
-	issn = {0027-8424, 1091-6490},
-	doi = {10.1073/pnas.1510489113},
-	shorttitle = {Recursive partitioning for heterogeneous causal effects},
-	pages = {7353--7360},
-	number = {27},
-	journal = {Proceedings of the National Academy of Sciences},
-	author = {Athey, Susan and Imbens, Guido W},
-	date = {2016-07-05},
-	langid = {english}
-}
-@article{AtheyImbens2017,
-	title = {The State of Applied Econometrics: Causality and Policy Evaluation},
-	volume = {31},
-	doi = {10.1257/jep.31.2.3},
-	shorttitle = {The State of Applied Econometrics},
-	pages = {3--32},
-	number = {2},
-	journal = {Journal of Economic Perspectives},
-	author = {Athey, Susan and Imbens, Guido W},
-	date = {2017-05},
-	langid = {english}
-}
-@article{JBSC2019,
-	title = {On Cluster Robust Models},
+@thesis{JBSC2019,
 	author = {Santiago Calderón, José Bayoán},
-	date = {2019}
-}
-@article{WagerAthey2015,
-	author = {Wager, Stefan and Athey, Susan},
-	title = {Estimation and Inference of Heterogeneous Treatment Effects using Random Forests},
-	journal = {arXiv e-prints},
-	keywords = {Statistics - Methodology, Mathematics - Statistics Theory, Statistics - Machine Learning},
-	year = {2015},
-	eid = {arXiv:1510.04342},
-	archivePrefix = {arXiv},
-	eprint = {1510.04342},
-	primaryClass = {stat.ME},
-	adsurl = {https://ui.adsabs.harvard.edu/\#abs/2015arXiv151004342W}
-}
-@article{Peck2005,
-	author = {Peck, Laura R.},
-	title = {Using Cluster Analysis in Program Evaluation},
-	volume = {29},
-	doi = {10.1177/0193841X04266335},
-	pages = {178--196},
-	number = {2},
-	journal = {Evaluation Review},
-	date = {2005-04},
-	langid = {english}
-}
-@article{BitlerGelbachHoynes2006,
-	title = {What Mean Impacts Miss: Distributional Effects of Welfare Reform Experiments},
-	volume = {96},
-	doi = {10.1257/aer.96.4.988},
-	shorttitle = {What Mean Impacts Miss},
-	pages = {988--1012},
-	number = {4},
-	journal = {American Economic Review},
-	author = {Bitler, Marianne P and Gelbach, Jonah B and Hoynes, Hilary W},
-	date = {2006-08},
-	langid = {english}
-}
-@article{BitlerGelbachHoynes2017,
-	title = {Can Variation in Subgroups' Average Treatment Effects Explain Treatment Effect Heterogeneity? Evidence from a Social Experiment},
-	volume = {99},
-	issn = {0034-6535, 1530-9142},
-	doi = {10.1162/REST_a_00662},
-	shorttitle = {Can Variation in Subgroups' Average Treatment Effects Explain Treatment Effect Heterogeneity?},
-	pages = {683--697},
-	number = {4},
-	journal = {The Review of Economics and Statistics},
-	author = {Bitler, Marianne P and Gelbach, Jonah B and Hoynes, Hilary W},
-	date = {2017-10},
-	langid = {english}
-}
-@TechReport{ListShaikhXu2016,
-	author = {List, John and Shaikh, Azeem and Xu, Yang},
-	title = {Multiple Hypothesis Testing in Experimental Economics},
-	year = {2016},
-	institution = {The Field Experiments Website},
-	type = {Artefactual Field Experiments},
-	url = {https://ideas.repec.org/p/feb/artefa/00402.html},
-	number={00402},
-}
-@misc{flood_integrated_2018,
-	title = {Integrated Public Use Microdata Series, Current Population Survey: Version 6.0},
-	shorttitle = {Integrated Public Use Microdata Series, Current Population Survey},
-	abstract = {{IPUMS}-{CPS} is dedicated to integrating and disseminating microdata from the Current Population Survey ({CPS}). The {CPS} is a monthly U.S. household survey conducted jointly by the U.S. Census Bureau and the Bureau of Labor Statistics. {IPUMS}-{CPS} contains harmonized data from every Annual Social and Economic Supplement ({ASEC}) supplement from 1962 to the present and all other supplements from 1976 to present. In addition to the many of the variables included in census data (race and ethnicity, education, income, occupation, industry, migration, disability, and veteran status), {IPUMS}-{CPS} includes additional information on work and income, such as participation in welfare programs, job searching, barriers to looking for work, union membership, hourly wages, health insurance, and tax liability. In addition, monthly supplements supplemental for certain years include information on computer and Internet use, displaced workers, fertility, food security, job tenure, tobacco use, volunteer activities, voter registration, and work schedules. {IPUMS}-{CPS} data are available through an online data access system free of charge to registered users at cps.ipums.org.},
-	publisher = {Minneapolis, {MN}: {IPUMS}},
-	author = {Flood, Sarah and King, Miriam and Rodgers, Renae and Ruggles, Steven and Warren, J. Robert},
-	date = {2018},
-	langid = {english},
-	doi = {10.18128/D030.V6.0},
-	note = {type: dataset}
-}
-@article{barrow_returns_2005,
-	title = {Do Returns to Schooling Differ by Race and Ethnicity?},
-	volume = {95},
-	issn = {0002-8282},
-	doi = {10.1257/000282805774670130},
-	pages = {83--87},
-	number = {2},
-	journal = {American Economic Review},
-	author = {Barrow, Lisa and Rouse, Cecilia Elena},
-	date = {2005-04},
-	langid = {english}
-}
-@article{dougherty_why_2005,
-	title = {Why Are the Returns to Schooling Higher for Women than for Men?},
-	volume = {{XL}},
-	issn = {1548-8004},
-	doi = {10.3368/jhr.XL.4.969},
-	pages = {969--988},
-	number = {4},
-	journal = {Journal of Human Resources},
-	author = {Dougherty, Christopher},
-	date = {2005},
-	langid = {english}
+	location = {Claremont, {CA}},
+	title = {On Cluster Robust Models},
+	institution = {Claremont Graduate University},
+	type = {phdthesis},
+	date = {2019},
+	doi = {10.5642/cguetd/132}
 }
 @article{Bezanson_Edelman_Karpinski_Shah_2017,
 	title = {Julia: A Fresh Approach to Numerical Computing},
@@ -490,18 +133,6 @@
 	publisher={Cambridge University Press},
 	year={1987},
 	pages={223–246}
-}
-@article{BK_1977,
-	title = {Some stable methods for calculating inertia and solving symmetric linear systems},
-	volume = {31},
-	issn = {0025-5718},
-	doi = {10.1090/S0025-5718-1977-0428694-0},
-	pages = {163--163},
-	number = {137},
-	journal = {Mathematics of Computation},
-	author = {Bunch, James R. and Kaufman, Linda},
-	date = {1977-01-01},
-	langid = {english}
 }
 @phdthesis{Konis_2007,
 	title = {Linear Programming Algorithms for Detecting Separated Data in Binary Logistic Regression Models},
@@ -638,15 +269,4 @@
  title = {Estimating the Economic Model of Crime with Panel Data},
  volume = {76},
  year = {1994}
-}
-@article{Kakadu,
-	title = {Allowing for Zeros in Dichotomous-Choice Contingent-Valuation Models},
-	volume = {17},
-	issn = {07350015},
-	doi = {10.2307/1392405},
-	pages = {479},
-	number = {4},
-	journal = {Journal of Business \& Economic Statistics},
-	author = {Werner, Megan},
-	date = {1999-10}
 }
