Clean up references.

--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,10 +1,9 @@
-@thesis{JBSC2019,
+@phdthesis{JBSC2019,
 	author = {Santiago Calderón, José Bayoán},
 	location = {Claremont, {CA}},
 	title = {On Cluster Robust Models},
-	institution = {Claremont Graduate University},
-	type = {phdthesis},
-	date = {2019},
+	school = {Claremont Graduate University},
+	year = {2019},
 	doi = {10.5642/cguetd/132}
 }
 @article{Bezanson_Edelman_Karpinski_Shah_2017,
